--- a/WebSessionPrototype/WebSession/appsettings.json
+++ b/WebSessionPrototype/WebSession/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "ConnectionStrings": {
+    //  "SkillFramework": "Server=localhost;Database=SkillFramework;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=False",
+
+    "CacheDatabase": "Server=localhost;Database=DistCache;Trusted_Connection=True;Encrypt=False"
+    // "CacheDatabase": "Server=VESPER;Database=DistCache;User Id=distcacheuser;Password=distcacheuser;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
